# cantor

./: .arcconfig  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CHANGELOG.md  CMakeLists.txt  CantorConfig.cmake.in  ChangeLog  DESIGN  FindCantor.cmake  README  README.md  TODO  cantor.appdata.xml  cmake.patch  org.kde.cantor.appdata.xml  qalculatebackend.cpp  qalculatebackend.desktop  qalculatebackend.h  qalculatebackend.kcfg  qalculatecompletionobject.cpp  qalculatecompletionobject.h  qalculateexpression.cpp  qalculatehighlighter.cpp  qalculatehighlighter.h  qalculatesession.cpp  qalculatesession.h  qalculatesyntaxhelpobject.cpp  qalculatesyntaxhelpobject.h  qalculatetabcompletionobject.cpp  qalculatetabcompletionobject.h  settings.ui  settingswidget.h  snapcraft.yaml
src/: .emacs-dirvars  CMakeLists.txt  Messages.sh  XmlMessages.sh  actionbar.cpp  actionbar.h  animation.cpp  animation.h  animationhandler.cpp  animationhandler.h  animationresultitem.cpp  animationresultitem.h  backendchoosedialog.cpp  backendchoosedialog.h  backendchooser.ui  cantor-documentation.knsrc  cantor.cpp  cantor.desktop  cantor.h  cantor.kcfg  cantor.knsrc  cantor.qrc  cantor.xml  cantor_kalgebra.knsrc  cantor_lua.knsrc  cantor_maxima.knsrc  cantor_octave.knsrc  cantor_part.cpp  cantor_part.desktop  cantor_part.h  cantor_part.json  cantor_part.qrc  cantor_part.rc  cantor_python2.knsrc  cantor_qalculate.knsrc  cantor_r.knsrc  cantor_sage.knsrc  cantor_scilab.knsrc  cantor_scripteditor.rc  cantor_shell.rc  (+106 more)
src/assistants/: CMakeLists.txt
src/assistants/advancedplot/: CMakeLists.txt  advancedplotassistant.cpp  advancedplotassistant.desktop  advancedplotassistant.h  advancedplotassistant.json  advancedplotassistant.qrc  advancedplotdialog.ui  cantor_advancedplot_assistant.rc  directivecontainer.ui
src/assistants/differentiate/: CMakeLists.txt  cantor_differentiate_assistant.rc  differentiateassistant.cpp  differentiateassistant.desktop  differentiateassistant.h  differentiateassistant.json  differentiateassistant.qrc  differentiatedlg.ui  mathematik_differentiate_assistant.rc
src/assistants/importpackage/: CMakeLists.txt  cantor_import_package_assistant.rc  importpackageassistant.cpp  importpackageassistant.desktop  importpackageassistant.h  importpackageassistant.json  importpackageassistant.qrc  importpackagedlg.ui
src/assistants/integrate/: CMakeLists.txt  cantor_integrate_assistant.rc  integrateassistant.cpp  integrateassistant.desktop  integrateassistant.h  integrateassistant.json  integrateassistant.qrc  integratedlg.ui  mathematik_integrate_assistant.rc
src/assistants/linearalgebra/: CMakeLists.txt
src/assistants/plot2d/: CMakeLists.txt  cantor_plot2d_assistant.rc  plot2dassistant.cpp  plot2dassistant.desktop  plot2dassistant.h  plot2dassistant.json  plot2dassistant.qrc  plot2ddlg.ui
src/assistants/plot3d/: CMakeLists.txt  cantor_plot3d_assistant.rc  plot3dassistant.cpp  plot3dassistant.desktop  plot3dassistant.h  plot3dassistant.json  plot3dassistant.qrc  plot3ddlg.ui
src/assistants/rplot/: CMakeLists.txt  cantor_rplot_assistant.rc  rplotassistant.cpp  rplotassistant.desktop  rplotassistant.h  rplotdialog.ui
src/assistants/runscript/: CMakeLists.txt  cantor_runscript_assistant.rc  mathematik_runscript_assistant.rc  runscriptassistant.cpp  runscriptassistant.desktop  runscriptassistant.h  runscriptassistant.json  runscriptassistant.qrc
src/assistants/solve/: CMakeLists.txt  cantor_solve_assistant.rc  mathematik_solve_assistant.rc  solveassistant.cpp  solveassistant.desktop  solveassistant.h  solveassistant.json  solveassistant.qrc  solvedlg.ui
src/backends/: CMakeLists.txt  backendsettingswidget.cpp  backendsettingswidget.h  qthelpconfig.cpp  qthelpconfig.h  qthelpconfig.ui  qthelpconfigeditdialog.ui
src/backends/R/: CMakeLists.txt  DESIGN  GenLibFile.py  cantor_r.knsrc  rbackend.cpp  rbackend.desktop  rbackend.h  rbackend.json  rcallbacks.cpp  rcallbacks.h  rcompletionobject.cpp  rcompletionobject.h  rexpression.cpp  rexpression.h  rextensions.cpp  rextensions.h  rhighlighter.cpp  rhighlighter.h  rkeywords.cpp  rkeywords.h  rsession.cpp  rsession.h  rsettingswidget.cpp  rsettingswidget.h  rthread.cpp  rthread.h  rvariablemodel.cpp  rvariablemodel.h  settings.kcfgc  settings.ui  testr.cpp  testr.h
src/backends/julia/: CMakeLists.txt  graphic_packages.xml  juliabackend.cpp  juliabackend.h  juliabackend.json  juliabackend.kcfg  juliacompletionobject.cpp  juliacompletionobject.h  juliaexpression.cpp  juliaexpression.h  juliaextensions.cpp  juliaextensions.h  juliahighlighter.cpp  juliahighlighter.h  juliakeywords.cpp  juliakeywords.h  juliascriptloading.h  juliasession.cpp  juliasession.h  juliasettingswidget.cpp  juliasettingswidget.h  juliavariablemodel.cpp  juliavariablemodel.h  keywords.xml  settings.kcfgc  settings.ui  testjulia.cpp  testjulia.h
src/backends/kalgebra/: CMakeLists.txt  cantor_kalgebra.knsrc  graph2dmobile.cpp  (+22 more)
src/lib/: CMakeLists.txt  Mainpage.dox  animationresult.cpp  animationresult.h  assistant.cpp  assistant.h  backend.cpp  backend.h  cantor_assistant.desktop  cantor_assistant.json  cantor_backend.desktop  cantor_backend.json  cantor_export.h  cantor_libs.kcfg  cantor_libs_settings.kcfgc  cantor_macros.h  cantor_panelplugin.desktop  cantor_panelplugin.json  completionobject.cpp  completionobject.h  config-cantorlib.h.cmake  defaulthighlighter.cpp  defaulthighlighter.h  defaultvariablemodel.cpp  defaultvariablemodel.h  epsrenderer.cpp  epsrenderer.h  epsresult.cpp  epsresult.h  expression.cpp  expression.h  extension.cpp  extension.h  graphicpackage.cpp  graphicpackage.h  helpresult.cpp  helpresult.h  htmlresult.cpp  htmlresult.h  imageresult.cpp  (+42 more)
src/panelplugins/: CMakeLists.txt
src/scripteditor/: CMakeLists.txt  main.cpp  scripteditor.qrc  scripteditorwidget.cpp  scripteditorwidget.h
src/test/: CMakeLists.txt  config-cantor-test.h.cmake  worksheet_test.cpp  worksheet_test.h
src/xslt/: CMakeLists.txt  latex.xsl
tests/: CMakeLists.txt  testmaxima.cpp  testmaxima.h  testsage.cpp  testsage.h
(+553 files in other folders)
